--- a/index.css
+++ b/index.css
@@ -7,7 +7,9 @@ body{
    
    font-family: 'Cairo', sans-serif;
    background-image: url(casino-bg.jpg);
+   
    background-size: cover;
+   background-repeat: no-repeat;
 }
 
 h1{
@@ -16,6 +18,7 @@ h1{
     letter-spacing: 2px;
     font-weight: 800;
     margin-bottom: 0;
+    text-align: center;
 
 }
 
@@ -46,6 +49,7 @@ p{
     background-color: rgb(227, 173, 36);
     border:1px solid transparent;
     margin-right:20px;
+    margin-bottom: 20px;
     padding: 8px 28px;
     border-radius: 4px;
     font-weight: 600;
